fix: link styles in mobile menu
The mobile nav links were white in dark mode since it would take the desktop nav links color, but since the mobile menu's background color is white it was making them invisible

--- a/css/styles.css
+++ b/css/styles.css
@@ -218,25 +218,29 @@ nav ul li a.active {
   position: fixed;
   gap: 1.25rem;
   top: 0;
-  right: -100%;
+    right: 0;
+  transform: translateX(100%);
   width: 250px;
   height: 100%;
   background-color: var(--white);
   color: #fff;
   padding: 20px;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
-  transition: right 0.3s ease;
+  transition: transform 0.3s ease-in-out;
   z-index: 1000;
 }
 
-.mobile-menu ul {
+.mobile-menu nav.mobile ul {
   gap: 2rem;
 }
 
-.mobile-menu a {
-  color: var(--link-color);
-  text-decoration: none;
+.mobile-menu nav.mobile ul li a {
+  color: var(--grey);
   font-size: var(--font-size-2);
+}
+
+.mobile-menu nav.mobile ul li a.active {
+  color: var(--dark-blue);
 }
 
 .close-menu {
@@ -259,7 +263,7 @@ nav ul li a.active {
 }
 
 .show-menu {
-    right: 0;
+    transform: translateX(0);
 }
 
 .show-overlay {
@@ -357,23 +361,6 @@ nav ul li a.active {
 .hero-image img {
   width: 100%;
   height: auto;
-}
-
-.profile {
-  position: absolute;
-  background-color: white;
-  border-radius: 1rem;
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.profile img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 1rem;
 }
 
 /* MEDIA QUERIES */
